--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,7 +3,7 @@
 
 <head>
     {{>headerMeta2}}
-     <link rel="stylesheet" href="/css/jobs.css">
+    <link rel="stylesheet" href="/css/jobs.css">
     <title> About : CareerPilot </title>
 </head>
 
@@ -14,8 +14,10 @@
 
         <h1 class="cover-title" id="about-title"> About Us </h1>
 
-
     </div>
+
+    <div class="container-padding">
+
     <h1 class="cover-para"> About CareerPilot </h1>
     <p class="index-para"> Welcome to CarrerPilot, a cutting-edge web portal powered by Node.js that revolutionizes how
         students and graduates navigate their educational and professional journeys. In an era of digital
@@ -44,6 +46,17 @@
         potential it holds. Our dedicated team is tirelessly working to create a comprehensive, user-friendly, and
         powerful platform that will be the cornerstone of your educational and professional journey. Join us on this
         exciting adventure as we build a bridge between your aspirations and the resources you need to achieve them.</p>
+
+    <h1 class="section-subtitles"> Developers </h1>
+
+    <p class="index-para"> Full Stack Development : <a href="https://www.instagram.com/2kwattz"> Roshan Bhatia </a></p>
+    <p class="index-para"> UI/UX, UML Diagrams : <a href="https://www.instagram.com/yaxh03/"> Yash Patel  </a></p>
+    <p class="index-para"> Latex, Data Dictionary, Documentation :  Shruti Pansuriya </p>
+    <p class="index-para"> Documentation :  Vidhi Patel </p><br>
+    </div>
+    </div>
+
+    {{>footer2}}
 
 </body>
 
