--- a/templates/views/certifications2.hbs
+++ b/templates/views/certifications2.hbs
@@ -40,22 +40,21 @@
 
                 <div class="filter-cat">
                     <h4 class="section-title"> Top Services </h4>
-                    Show/Hide JobRapido Posting <input type="checkbox"> <br>
-                    Show/Hide LinkedIn Posting<input type="checkbox"> <br>
+                    Show/Hide W3Schools Posting <input type="checkbox"> <br>
+                    Show/Hide Other Posting<input type="checkbox"> <br>
 
 
                 </div>
 
                 <div class="filter-cat">
                     <h4 class="section-title"> Top Locations </h4>
-                    Work from office <input type="checkbox"> <br>
-                    Hybrid <input type="checkbox"> <br>
+                
                     Remote/WFH <input type="checkbox"> <br>
 
                 </div>
 
                 <div class="filter-cat">
-                    <h4 class="section-title"> Top Salary </h4>
+                    <h4 class="section-title"> Cost </h4>
 
                 </div>
 
@@ -70,9 +69,9 @@
 
                 <div class="result-box">
                     <span> Course Name : {{this.title}}</span><br>
-                    <span> Job Title : {{this.price}} </span><br>
-                    <span> Start Date : </span><br>
-                    <span>  Duration : </span><br>
+                    <span> Course Cost : $ {{this.price}} </span><br>
+                    <span>  Source : W3Schools </span><br>
+                    <span>  Duration : Not Specified </span><br>
                     {{this.image}}
                     <button class="btn"> View </button>
                 </div>
