--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -113,7 +113,7 @@
                 <div class="result-box internshalaContainer">
                     <span> Company Name : {{this.title}}</span><br>
                     <span> Job Title : {{this.jobTitle}} </span><br>
-                    <span class="salary"> Stripend : {{this.stripend}} </span><br>
+                    <span class="salary"> Stripend : ₹ <span class="refined-value">{{this.stripend}}</span> / Month </span><br>
                     <span> Internship Location : {{this.location}}</span><br>
                     <span> Source : Internshala </span><br>
                     {{!-- <span> <img src="{{this.dataURI}}"></span> --}}
