--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -82,11 +82,11 @@
 
             <div class="filters">
 
-                <div class="filter-cat">
+                    <div class="filter-cat">
                     <h4 class="section-title"> Top Services </h4>
-                    Show/Hide JobRapido Posting <input type="checkbox"> <br>
-                    Show/Hide LinkedIn Posting<input type="checkbox"> <br>
-                    Show/Hide WeWorkRemotely Posting<input type="checkbox"> <br>
+                    <button class="btn" onclick="toggleJobRapido()"> Show/Hide Job Rapido Posting </button> <br>
+                    <button class="btn" onclick="togglelinkedin()"> Show/Hide LinkedIn Posting </button> <br>
+                    <button class="btn" onclick="togglelinkedin()"> Show/Hide WWR Posting </button> <br> <br> <br>
 
 
                 </div>
