MinMax Salary Filter functional, Toggle compsnies filter functional, User Profile refined

--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -82,6 +82,14 @@
 
             <div class="filters">
 
+
+                   <div id="filter-cat">
+                    <h4 class="section-title">Stripend</h4>
+                    <input type="number" id="minSalary" placeholder="Min Salary">
+                    <input type="number" id="maxSalary" placeholder="Max Salary"><br>
+                    <button class="btn" id="salaryFilter">Filter</button>
+                </div>
+                
                     <div class="filter-cat">
                     <h4 class="section-title"> Top Services </h4>
                     <button class="btn" onclick="toggleJobRapido()"> Show/Hide Job Rapido Posting </button> <br>
