MinMax Salary Filter functional, Toggle compsnies filter functional, User Profile refined

--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -134,7 +134,7 @@
                         <span> Company Name : {{this.company}}</span><br>
                         <span> Job Title : {{this.title}} </span><br>
                         <span> Start Date : {{this.listDate}}</span><br>
-                        <span> Internship Location : {{this.location}}</span><br>
+                        <span> Internship Location : <span id="intLocationFilter">{{this.location}} </span></span><br>
                         <span> Source : Linkedin</span><br>
                         <button class="btn"> View </button>
                     </div>
