MinMax Salary Filter functional, Toggle compsnies filter functional, User Profile refined

--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -89,7 +89,7 @@
                     <input type="number" id="maxSalary" placeholder="Max Salary"><br>
                     <button class="btn" id="salaryFilter">Filter</button>
                 </div>
-                
+
                     <div class="filter-cat">
                     <h4 class="section-title"> Top Services </h4>
                     <button class="btn" onclick="toggleJobRapido()"> Show/Hide Job Rapido Posting </button> <br>
@@ -180,7 +180,7 @@
         <a class="btn external-link-btn" href="{{this.redirectLink}}" target="_blank"> View Details </a> 
         <div id="modal-data">
         {{#each wwrAbout}}
-            {{this.about}}
+            {{this.aboutJob}}
              {{/each}}
         </div>
     </div>
