--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
+    <link rel="stylesheet" href="/css/scholarships.css">
     <title>Scholarship Search : CarrerPilot</title>
 </head>
 
 <body>
-    {{>header}}
+    {{>header2  }}
 
 
-    <div class="container">
+    <div class="scholarship-hero">
 
-        <h1> Scholarship Search Portal</h1>
+        <h1 class="cover-title"> Scholarship Search Portal</h1>
+
+        <p class="cover-para" style="text-align: center!important;">Explore Endless Opportunities: Your Gateway to
+            Career Success </p>
     </div>
 
     <center>
@@ -22,6 +26,7 @@
             <form method="POST" action="/scholarships">
 
                 <h2 class="section-titles"> India's No. #1 Scholarship Search Engine </h2>
+           
                 <br>
                 <label for="education"> Your Goal/Education </label>
 
@@ -36,25 +41,23 @@
                     <option value="class_xii">Class XII</option>
                 </select>
 
-                <label for="cars">Choose a state :</label>
+                <label for="state">Choose a state :</label>
 
                 {{!-- Yet to work --}}
 
                 <select name="locationForScholarship" id="locationForScholarship">
-                    <option value="mercedes">All India</option>
+                    <option value="india">All India</option>
                     <option value="gujarat">Gujarat</option>
                     <option value="assam">Assam</option>
                     <option value="kerala">Kerela</option>
                     <option value="bihar">Bihar</option>
-                    <option value="audi">Himachal Pradesh</option>
                     <option value="nagaland">Nagaland</option>
-                    <option value="audi">Andaman and Nicobar Islands</option>
-                    <option value="odisha">Odisha</option>
-                    <option value="odisha">Odisha</option>
-                    <option value="odisha">Odisha</option>
+                    <option value="andaman">Andaman and Nicobar Islands</option>
+                    <option value="rajasthan">Rajasthan</option>
                 </select>
 
                 <button class="btn" type="submit"> Search </button>
+
                 {{!-- <h1 class="index-para section-titles"> Search by Keyword </h2>
 
                 <input type="text" name="scholarshipKeyword" id="scholarshipKeyword">
@@ -65,7 +68,7 @@
 
     </center>
 
-    <div class="resultContainer">
+    <div class="section">
         <div class="filters">
 
             <h1 class="section-subtitles"> Filters</h1>
@@ -75,65 +78,36 @@
             <button class="btn" id="ascendingButton" onclick="sortData('asc')">Sort Ascending</button>
             <button class="btn" id="descendingButton" onclick="sortData('desc')">Sort Descending</button>
 
-            <h4> Need to add: Most Relevent/Most recent</h4>
-            <br> <label> Hide/Show Internshala </label> <input type="checkbox" name="internshalaToggle"
+            <br><br> <label> Hide/Show Scholarship Forme </label> <input type="checkbox" name="internshalaToggle"
                 onchange="toggleInternshala()">
-            <br> <label> Hide/Show Linkedin </label> <input type="checkbox" name="internshalaToggle"
+            {{!-- <br> <label> Hide/Show Linkedin </label> <input type="checkbox" name="internshalaToggle"
                 onchange="toggleLinkedin()">
             <br> <label> Only Show Top Companies </label> <input type="checkbox" name="internshalaToggle"
                 onchange="toggleInternshala()">
             <br> <label> Only Show Work from Home </label> <input type="checkbox" name="internshalaToggle"
-                onchange="toggleInternshala()">
+                onchange="toggleInternshala()"> --}}
 
         </div>
 
-        <div class="internshipData" id="filterData">
+        <div class="results" id="filterData">
 
             <div class="internshalaContainer">
-
-                <h1 class="section-subtitles"> Scholarship Forme Scholarships </h1>
 
 
                 {{#each sFormeData}}
 
-                <div class="internshipContainer">
+                <div class="result-box">
                     <span> Scholarship Name : {{this.title}}</span><br>
                     <span> Location : {{this.location}} </span><br>
                     <span> Validity : {{this.validity}} </span><br>
-                    <span> Description : {{this.description}} </span><br>
+                    {{!-- <span> Description : {{this.description}} </span><br> --}}
                     {{!-- <span> Start Date : </span><br>
                     <span> Internship Location : {{this.location}}</span> --}}
-                    <button class="btn"> View Scholarship </button> 
+                    <button class="btn"> <a href="{{redirectDomain}}" target="_blank"> View Scholarship </a></button> 
                 </div>
                 {{/each}}
 
 
-
-            </div>
-
-
-            <div class="linkedinContainer">
-                <h1 class="section-subtitles"> National Gov Scholarships </h1>
-
-                {{!-- {{#each linkedinData}}
-
-                <div class="internshipContainer">
-                    <span> Company Name : {{this.company}}</span><br>
-                    <span> Job Title : {{this.title}} </span><br>
-                    <span> Start Date : </span><br>
-                    <span> Internship Duration : </span><br>
-                    <span> Start Date : {{this.listDate}}</span><br>
-                    <span> Internship Location : {{this.location}}</span>
-                    <button class="btn"> View </button>
-                </div>
-
-                {{/each}} --}}
-
-               
-            </div>
-
-            <div class="topMNCsContainer">
-                <h1 class="section-subtitles"> Top Companies Scholarships </h1>
 
             </div>
 
@@ -149,7 +123,7 @@
        
     </script>
 
-    {{>footer}}
+    {{>footer2}}
 </body>
 
 </html>
