--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -199,6 +199,8 @@
                 </div>
             </div>
         </div>
+
+        {{>footer2}}
         <script src="js/modals.js"></script>
         <script src="js/internshipFilters.js"></script>
 </body>
