--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -15,6 +15,16 @@ body {
     line-height: 1.5
 }
 
+/* SCROLLBAR  */
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--clr-primary);
+}
+
 /* Utility */
 
 .btn-white {
