--- a/templates/views/login2.hbs
+++ b/templates/views/login2.hbs
@@ -12,6 +12,8 @@
     {{>header2}}
 
     <div class="section-container">
+
+
         <div class="inner-container">
         <div class="sec-left">
 
@@ -21,6 +23,11 @@
 
         <div class="sec-right">
             <center>
+
+                 {{message}}
+                  <p id="isLoginError"> {{loginErrorIfAny}} </p><br>
+        {{errorMsg}}
+           {{logoutMessage}}
             <form method="POST" action="/login">
 
                 <label> Email Id </label><br>
@@ -29,7 +36,7 @@
                 <label> Password </label><br>
                 <input type="password" placeholder="Enter your password" id="password" name="password"><br><br>
                 <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label><br>
-                <a href="/forgotpassword"> Forgot Password? Click Here!</a>
+                <a href="/forgotpassword" style="text-decoration: none"> Forgot Password? Click Here!</a><br><br>
 
                 <button class="btn g-recaptcha" id="login" type="submit"> Login </button><br>
 
@@ -41,7 +48,7 @@
     </div>
 
 
-    {{footer2}}
+    {{>footer2}}
 
 </body>
 
