--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -17,7 +17,7 @@
     <!-- Content to display if user has a profile picture -->
 
     <div class="profile-cover-img">
-        {{!-- <img src="img/profile/cover.jpg" alt="Cover Photo"> --}}
+        
 
     </div>
 
@@ -50,10 +50,13 @@
     <div class="profile-info-container">
         <div class="profile-info">
             <h1 id="profile-name"> Personal Information </h1>
-            <br> Gender : {{userProfile.userGender}}
-            <br> City : {{userProfile.userCity}} , {{userProfile.userState}}
-            <br> Status : {{userProfile.userStatus}}
-            <br> Age : {{userProfile.userAge}}
+           <span> <div class="profile-items"> <img src="/img/vectors/env-email.svg" height="25px" width="25px"> Gender : {{userProfile.userGender}} </div> </span><br>
+           <span> <div class="profile-items"> <img src="/img/vectors/env-email.svg" height="25px" width="25px"> City : {{userProfile.userCity}} , {{userProfile.userState}} , {{userProfile.userCountry}} </div> </span><br>
+           <span> <div class="profile-items"> <img src="/img/vectors/env-email.svg" height="25px" width="25px"> Age : {{userProfile.userAge}} </div> </span><br>
+           <span> <div class="profile-items"> <img src="/img/vectors/env-email.svg" height="25px" width="25px"> Email : {{userProfile.userEmail}} </div> </span><br>
+            <br>
+            <br> 
+            <br> 
 
         </div>
 
@@ -103,34 +106,6 @@
         <input type="file" name="updateImage"> Upload Profile Picture
         <button class="btn" type="submit"> Save Changes </button>
     </form>
-
-
-
-
-    <div class="internshipContainer" style="width=90% !important">
-
-        <h1 class="section-subtitles"> About Information </h1>
-
-        <br> Gender : {{userProfile.userGender}}
-        <br> City : {{userProfile.userCity}} , {{userProfile.userState}}
-        <br> Status : {{userProfile.userStatus}}
-        <br> Age : {{userProfile.userAge}}
-
-        <br> <button class="btn" onclick="editProfile()"> Edit Info </button>
-    </div>
-
-    <div class="internshipContainer" style="width=90% !important">
-
-        <h1 class="section-subtitles"> Educational Information </h1>
-
-        <br> College : {{userProfile.userClg}}
-        <br> Branch : {{userProfile.userBranch}}
-        <br> Course : {{userProfile.userCourse}}
-        <br> Interests : {{userProfile.interests}}
-
-
-        <br> <button class="btn" onclick="editProfile()"> Edit Info </button>
-    </div>
 
     <script>
 
