Scholarship UI Changed, Acc creation page added, Scrollbar added, Toggle companies filter functional, User Profile refined

--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -63,10 +63,9 @@
         <div class="profile-info">
             <h1 id="profile-name"> Educational Information </h1><hr>
             <span> <div class="profile-items"> <img src="/img/vectors/clg.svg" height="25px" width="25px"> College : {{userProfile.userClg}} </div> </span><br>
-            <br> College : {{userProfile.userClg}}
-            <br> Branch : {{userProfile.userBranch}}
-            <br> Course : {{userProfile.userCourse}}
-            <br> Interests : {{userProfile.interests}}
+            <span> <div class="profile-items"> <img src="/img/vectors/branch.svg" height="25px" width="25px"> Branch : {{userProfile.userBranch}} </div> </span><br>
+            <span> <div class="profile-items"> <img src="/img/vectors/course.svg" height="25px" width="25px"> Course : {{userProfile.userCourse}} </div> </span><br>
+               <span> <div class="profile-items"> <img src="/img/vectors/code-b.svg" height="25px" width="25px"> Interests : Full Stack Web Development </div> </span><br>
 
 
         </div>
