--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -91,16 +91,17 @@
                 <div class="filter-cat">
                     <h4 class="section-title"> Top Services </h4>
                     <button class="btn" onclick="toggleInternshala()"> Show/Hide Internshala Posting </button> <br>
-                    <button class="btn" onclick="togglelinkedin()"> Show/Hide LinkedIn Posting </button> <br> <br>
+                    <button class="btn" onclick="togglelinkedin()"> Show/Hide LinkedIn Posting </button> <br>
+                    <button class="btn" onclick="togglelinkedin()"> Show/Hide Other Posting </button> <br> <br>
                 </div>
 
-                <div class="filter-cat">
+                {{!-- <div class="filter-cat">
                     <h4 class="section-title"> Top Locations </h4>
                     Work from office <input type="checkbox"> <br>
                     Hybrid <input type="checkbox"> <br>
                     Remote/WFH <input type="checkbox"> <br>
 
-                </div>
+                </div> --}}
 
             </div>
 
