--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -33,7 +33,7 @@
         </div>
         <div class="profile-info">
             <h1 id="profile-name"> {{capName}}</h1>
-            <p id="edu"> {{userProfile.userCity}}</p>
+            <p id="edu"> Full Stack Web Developer </p>
 
         </div>
 
