Scholarship UI Changed, Acc creation page added, Scrollbar added, Toggle companies filter functional, User Profile refined

--- a/templates/views/certifications2.hbs
+++ b/templates/views/certifications2.hbs
@@ -54,7 +54,10 @@
                 </div>
 
                 <div class="filter-cat">
-                    <h4 class="section-title"> Cost </h4>
+                    <h4 class="section-title"> Sort By </h4>
+
+                    <span> Sort by Ascending</span><input type="checkbox"><br>
+                    <span> Sort by Descending</span><input type="checkbox">
 
                 </div>
 
