--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -21,7 +21,7 @@
 
     <center>
 
-        <div class="scholarshipPortal">
+        <div class="scholarshipPortal grey-background">
 
             <form method="POST" action="/scholarships">
 
