--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -637,6 +637,7 @@ p {
     background-color: rgb(243, 243, 243);
     padding: 50px;
     width: 60%;
+    margin-top: 20px;
 }
 
 .grey-background input[type="file"] {
