Scholarship UI Changed, Acc creation page added, Scrollbar added, Toggle companies filter functional, User Profile refined

--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -192,9 +192,7 @@
 
                 <h3> Internship details </h3>
 
-
-
-                <a class="btn external-link-btn" href="{{this.redirectLink}}" target="_blank"> View Details </a>
+                <a class="btn external-link-btn" href="{{internshalaData.redirectLink}}" target="_blank"> View Details </a>
                 <div id="modal-data">
                     <!-- Dynamic data will be injected here -->
                 </div>
